--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTteKeROUWP5RTxgq29qEVruY-jLTqB1lCh25mFMM6LjWKEdCoBaO2vhyPJvGLH60Oqx_Q&usqp=CAU" alt="">
      </section>
      <footer>
-        <h1>BUTTONS</h1>
+        <h1>BUTTONS hehe</h1>
         <div>
             <button>
                 <p>A</p>
